syntax = "proto3";

package busi;
import "google/protobuf/empty.proto";

option go_package = "./busi";

// DtmRequest request sent to dtm server
message ReqGrpc {
  int64 Amount = 1;
  string TransOutResult = 2;
  string TransInResult = 3;
}

message BusiReply {
  string message = 1;
}
// The dtm service definition.
service Busi {
  rpc TransIn(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOut(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransInRevert(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOutRevert(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransInConfirm(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOutConfirm(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc XaNotify(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc TransInXa(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOutXa(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransInTcc(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOutTcc(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransInTccNested(ReqGrpc) returns (google.protobuf.Empty) {}

  rpc TransInBSaga(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOutBSaga(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransInRevertBSaga(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOutRevertBSaga(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOutHeaderYes(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOutHeaderNo(ReqGrpc) returns (google.protobuf.Empty) {}

  rpc TransInRedis(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOutRedis(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransInRevertRedis(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc TransOutRevertRedis(ReqGrpc) returns (google.protobuf.Empty) {}

  rpc QueryPrepared(ReqGrpc) returns (BusiReply) {}
  rpc QueryPreparedB(ReqGrpc) returns (google.protobuf.Empty) {}
  rpc QueryPreparedRedis(ReqGrpc) returns (google.protobuf.Empty) {}
}

